# csc299-project

./: .gitignore  CHANGELOG.md  GETTING_STARTED.md  PR_SUMMARY.md  README.md  README_DRAFT.md  SUMMARY.md  pkms  pkms.bat  pkms.ps1  prompt  pyproject.toml  pytest.ini  run.ps1  run.sh  run_tests.ps1  run_tests.sh  video.txt
.github/: copilot-instructions.md
app_data/: docs.json  notes.json  tasks.db  tasks.json
archive_removed_by_agent/: .coverage  run_tasks3.py  sitecustomize.py  task_neko_data.json
data/: tasks.json
data_pkms/: chat_history.json  docs.json  tasks.db  tasks.json
deliverables/: PROTOTYPE_VERSION.txt  README.md  SUBMISSION_CHECKLIST.md
docs/: PROTOTYPE.md
pkms_core/: __init__.py  agent.py  chat.py  cli.py  config.py  core.py  dashboard.py  keyring_store.py  llm.py  llm_mock.py  llm_openai.py  logging_setup.py  models.py  storage.py  tui.py  ui_textual.py
pkms_core.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: demo_pkms_chat.py  generate_commit_history.sh  migrate_data.py  pkms_home.py  run_cli_smoke.py
task-neko/: README.md  main.py  styles.tcss
tasks1/: README.md  __init__.py  tasks.json  tasks.py
tasks2/: README.md  __init__.py  core.py  tasks.py
tasks3/: INTRO.md  README.md  pyproject.toml  video.txt
tasks4/: README.md  pyproject.toml
tasks4/src/: _init_.py
tasks4/src/tasks4/: __init__.py  cli.py  cli_typer.py  models.py  repository.py  status.py  tasks4.py
tasks4/tests/unit/: test_summarizer.py  test_tasks4.py
tasks5/: .coverage  pyproject.toml
tasks5/.specify/scripts/bash/: create-new-feature.sh  update-agent-context.sh
tasks5/app_data/: tasks.json
tasks5/demo_user_data/app_data/: notes.json  tasks.json
tasks5/src/spec_kit_task_manager.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_advice_dashboard.py  test_advise_priority.py  test_agent_docs_and_timezone.py  test_agent_extra_edgecases.py  test_agent_focus_overload.py  test_agent_heuristics.py  (+24 more)
(+54 files in other folders)
