[project]
name = "pkms-core"
version = "0.1.0"
description = "Prototype Task & Personal Knowledge Management CLI (JSON/SQLite)"
readme = "README.md"
requires-python = ">=3.9"
license = "LicenseRef-Proprietary"
authors = [ { name = "Zack" } ]
dependencies = ["typer>=0.9.0", "rich>=13.7.0"]

[project.scripts]
pkms = "pkms_core.cli:main"

[tool.pytest.ini_options]
pythonpath = [".", "tasks4/src", "tasks5/src"]
addopts = "-q"

# Restrict setuptools package discovery to only pkms_core to avoid editable install error
[tool.setuptools.packages.find]
where = ["."]
include = ["pkms_core"]
exclude = ["tasks1", "tasks2", "tasks3", "tasks4", "tasks5", "tasks_cli", "task-neko", "data", "data_pkms"]
