[project]
name = "tasks4"
version = "0.1.0"
description = "Standalone experiment: summarize task descriptions using OpenAI Chat Completions API."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["openai>=1.0.0", "typer[all]>=0.9.0"]

[project.scripts]
tasks4 = "tasks4:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"