[project]
name = "spec-kit-task-manager"
version = "0.1.0"
description = "CLI task manager MVP (create, list, search)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "UNLICENSED" }
authors = [ { name = "Project" } ]
keywords = ["cli", "tasks", "json"]
classifiers = ["Programming Language :: Python :: 3"]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "coverage>=7.0.0", "openai>=1.0.0"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 85
precision = 2

[tool.pytest.ini_options]
addopts = "-q --strict-markers --disable-warnings --maxfail=1 --cov=src --cov-report=term-missing"
pythonpath = ["src"]
